# open-webui-rag-native

./: .gitignore  ENHANCED_RAG_README.md  GUIDE.md  HOW_TO_RUN.md  INTEGRATION_GUIDE.md  METHODOLOGY.md  README.md  STUDENT_GUIDE.md  TECHNICAL_GUIDE.md  TROUBLESHOOTING.md  enhanced_api_server.py  env_example.txt  pipelines_server.py  pyproject.toml  quick_test.py  requirements.txt  test.py  web_api_server.py
adaptive_rag/: __init__.py  grader.py  graph.py  nodes.py  rewriter.py  router.py  vector_store.py
docs/: INTEGRATION_FILES_GUIDE.md  INTEGRATION_GUIDE.md  PDF_UPDATE_GUIDE.md  PROJECT_STRUCTURE.md  README.md
document_processing/: __init__.py  pdf.py
enhanced_rag/: __init__.py  cache_manager.py  optimized_rag.py  session_manager.py  task_queue.py
open-webui/: package-lock.json  package.json
open-webui/src/lib/i18n/: index.ts
pipelines/: adaptive_rag_pipeline.py  enhanced_rag_pipeline.py
scripts/: build_frontend.py  cleanup_workspace.py  index_documents.py  start_enhanced_system.py  start_rag_server.py  start_server.py  start_webui.py  start_webui_integration.py  test_enhanced_rag.py  test_pipeline.py
