[project]
name = "LLM_Chatbot"
version = "1.0.0"
description = "한국어 지원 Adaptive RAG + Open WebUI 통합 AI 챗봇 시스템"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["rag", "langchain", "langgraph", "openai", "faiss", "korean", "chatbot"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "faiss-cpu>=1.11.0.post1",
    "fastmcp>=2.11.3",
    "grandalf>=0.8",
    "jupyter>=1.1.1",
    "langchain>=0.3.27",
    "langchain-chroma>=0.2.3",
    "langchain-community>=0.3.27",
    "langchain-experimental>=0.3.4",
    "langchain-mcp-adapters>=0.1.9",
    "langchain-openai>=0.3.28",
    "langchain-tavily>=0.2.11",
    "langchain-teddynote>=0.4",
    "langgraph>=0.5.4",
    "langgraph-checkpoint-postgres>=2.0.23",
    "mcp>=1.12.4",
    "neo4j-driver>=5.28.2",
    "notebook>=7.4.4",
    "pandas>=2.3.1",
    "pdfplumber>=0.11.7",
    "psycopg[binary,pool]>=3.2.9",
    "python-dotenv>=1.1.1",
    "rank-bm25>=0.2.2",
    "unstructured>=0.18.11",
]
